Added dependencie,s three.js boilerplate and model

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Getting Started</title>
 	</head>
 	<body>
-		<script src="./dist/main.js"></script>
+		<!-- 3D Model -->
+		<div id="scene-container"></div>
 	</body>
 </html>
