--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,10 @@
 	<body>
 		<!-- 3D Model -->
 		<div id="scene-container"></div>
+		<!-- <p>THIS IS FOR SPLASH DESCRIPTION</p>
+		<p>THIS IS FOR EMAIL % OFF DESCRIPTION</p>
+		<input>
+		<div><a>archive</a><a>shop</a></div>
+		<div><a>socials</a></div> -->
 	</body>
 </html>
