Styling changes and template

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,19 @@
 	</head>
 	<body>
 		<!-- 3D Model -->
-		<div id="scene-container"></div>
-		<!-- <p>THIS IS FOR SPLASH DESCRIPTION</p>
-		<p>THIS IS FOR EMAIL % OFF DESCRIPTION</p>
-		<input>
-		<div><a>archive</a><a>shop</a></div>
-		<div><a>socials</a></div> -->
+		<div id="container">
+			<canvas id="scene"></canvas>
+			<p class="row" id="description">New insights develop into new approaches. Our insights and achievements over the last year have allowed us to find new directions and better our approach.</p>
+			<label>DIADOZ 2.0 Alert & 30% off any purchase at the shop<input type="text"></label>
+			<div class="row" id="footer">
+				<div>
+					<a>archive</a>
+					<a>shop</a>
+				</div>
+				<div>
+					<a>socials</a>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
