Added color scheme and fixed up alignments

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,20 @@
 		<!-- 3D Model -->
 		<div id="container">
 			<canvas id="scene"></canvas>
-			<p class="row" id="description">New insights develop into new approaches. Our insights and achievements over the last year have allowed us to find new directions and better our approach.</p>
-			<label>DIADOZ 2.0 Alert & 30% off any purchase at the shop<input type="text"></label>
+			<div class="row float-40">
+				<p id="description">
+					New insights develop into new approaches. Our insights and achievements over the last year have allowed us to find new directions and better our approach.
+				</p>
+			</div>
+			<div class="row float-65">
+				<input type="text">
+				<label id="email-sign">
+					<p>DIADOZ 2.0 alert & 30% off any purchase at the shop</p>
+				</label>
+			</div>
 			<div class="row" id="footer">
 				<div>
-					<a>archive</a>
-					<a>shop</a>
+					<a>rchve</a> | <a>shop</a>
 				</div>
 				<div>
 					<a>socials</a>
