Playing with styling. Changed order of content

--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,20 @@
 <html>
 	<head>
 		<title>DIADOZ</title>
+		<link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
 		<!-- 3D Model -->
 		<div id="container">
 			<canvas id="scene"></canvas>
-			<div class="row float-40">
+			<div class="row float-65">
 				<p id="description">
-					New insights develop into new approaches. Our insights and achievements over the last year have allowed us to find new directions and better our approach.
+					<span class="justified letter-space">New insights <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions and better our approach.</span>
 				</p>
 			</div>
-			<div class="row float-65">
-				<input type="text">
+			<div class="row float-50">
+				<div><input type="text" placeholder="example@diadoz.com"><span id="submit"></span></div>
+				
 				<label id="email-sign">
 					<p>DIADOZ 2.0 alert & 30% off any purchase at the shop</p>
 				</label>
