Input submit styling height

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,10 @@
 				</p>
 			</div>
 			<div class="row float-50">
-				<div><input type="text" placeholder="example@diadoz.com"><span id="submit"></span></div>
-				
+				<div class="input-row">
+					<input type="text" placeholder="example@diadoz.com">
+					<span id="submit"></span>
+				</div>
 				<label id="email-sign">
 					<p>DIADOZ 2.0 alert & 30% off any purchase at the shop</p>
 				</label>
