added material icon, stylized button

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<title>DIADOZ</title>
 		<link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 	</head>
 	<body>
 		<!-- 3D Model -->
@@ -16,7 +18,11 @@
 			<div class="row float-50">
 				<div class="input-row">
 					<input type="text" placeholder="example@diadoz.com">
-					<span id="submit"></span>
+					<span id="submit">
+						<i class="material-icons">
+							email
+						</i>
+					</span>
 				</div>
 				<label id="email-sign">
 					<p>DIADOZ 2.0 alert & 30% off any purchase at the shop</p>
