Added fontawesome icons

--- a/src/index.html
+++ b/src/index.html
@@ -12,28 +12,28 @@
 			<canvas id="scene"></canvas>
 			<div class="row float-65">
 				<p id="description">
-					<span class="justified letter-space">New insights <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions and better our approach.</span>
+					<span class="justified letter-space">New insights can <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions, to better our approach, and to fine tune our output.</span>
 				</p>
 			</div>
 			<div class="row float-50">
-				<div class="input-row">
-					<input type="text" placeholder="example@diadoz.com">
-					<span id="submit">
-						<i class="material-icons">
-							email
-						</i>
-					</span>
-				</div>
 				<label id="email-sign">
-					<p>DIADOZ 2.0 alert & 30% off any purchase at the shop</p>
+					<p>To receive a 30% off code for the shop and an alert when our 2.0 website drops, enter your email!</p>
+					<div class="input-row">
+						<input type="text" placeholder="example@diadoz.com">
+						<span id="submit">
+							<i class="material-icons">
+								email
+							</i>
+						</span>
+					</div>
 				</label>
 			</div>
 			<div class="row" id="footer">
 				<div>
-					<a>rchve</a> | <a>shop</a>
+					<a>ARCHIVE</a> | <a>SHOP</a>
 				</div>
-				<div>
-					<a>socials</a>
+				<div id="socials">
+					<i class="fab fa-twitter"></i><i class="fab fa-facebook-f"></i><i class="fab fa-instagram"></i><i class="fab fa-youtube"></i>
 				</div>
 			</div>
 		</div>
