Fixed input label and type, added link hrefs

--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
 				</p>
 			</div>
 			<div class="row float-50">
-				<label id="email-sign">
-					<p>To receive a 30% off code for the shop and an alert when our 2.0 website drops, enter your email!</p>
+				<label for="email-input" id="email-sign">
+					<p>We got some new stickers on the way, if you trying to get in on those enter that contact info right here!</p>
 					<div class="input-row">
-						<input type="text" placeholder="example@diadoz.com">
+						<input id="email-input" type="email" placeholder="example@diadoz.com">
 						<span id="submit">
 							<i class="material-icons">
 								email
@@ -30,10 +30,21 @@
 			</div>
 			<div class="row" id="footer">
 				<div>
-					<a>ARCHIVE</a> | <a>SHOP</a>
+					<a href="https://archive.diadoz.com" target="_blank">ARCHIVE</a> | <a href="https://shop.diadoz.com" target="_blank">SHOP</a>
 				</div>
 				<div id="socials">
-					<i class="fab fa-twitter"></i><i class="fab fa-facebook-f"></i><i class="fab fa-instagram"></i><i class="fab fa-youtube"></i>
+					<a href="https://twitter.com/diadozofficial" target="_blank">
+						<i class="fab fa-twitter"></i>
+					</a>
+					<a href="https://www.facebook.com/diadoz/" target="_blank">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+					<a href="https://www.instagram.com/diadoz_" target="_blank">
+						<i class="fab fa-instagram"></i>
+					</a>
+					<a href="https://www.youtube.com/channel/UC9n6SV0C0qezMLUnwhJBrxA" target="_blank">
+						<i class="fab fa-youtube"></i>
+					</a>
 				</div>
 			</div>
 		</div>
