added typing effect, changed init start control

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 			<canvas id="scene"></canvas>
 			<div class="row float-65">
 				<p id="description">
-					<span class="justified letter-space">New insights can <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions, to better our approach, and to fine tune our output.</span>
+					<span id="caret"></span>
 				</p>
 			</div>
 			<div class="row float-50">
@@ -57,3 +57,7 @@
 		</div>
 	</body>
 </html>
+
+
+
+<!-- <span class="justified letter-space">New insights can <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions, to better our approach, and to fine tune our output.</span> -->
