Clean up, moved caret to update with text

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,7 @@
 		<div id="container">
 			<canvas id="scene"></canvas>
 			<div class="row float-65">
-				<p id="description">
-					<span id="caret"></span>
-				</p>
+				<p id="description"></p>
 			</div>
 			<div class="row float-50">
 				<label for="MERGE0" id="email-sign">
