Hid elements for game initialization, created init

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
 		<!-- 3D Model -->
 		<div id="container">
 			<canvas id="scene"></canvas>
-			<div class="row float-65">
+
+			<div class="row float-65 hide">
 				<p id="description"></p>
 			</div>
-			<div class="row float-50">
+			<div class="row float-50 hide">
 				<label for="MERGE0" id="email-sign">
 					<p>We got some new stickers on the way, if you trying to get in on those enter that contact info right here!</p>
 					<div class="input-row">
@@ -33,7 +34,7 @@
 					</div>
 				</label>
 			</div>
-			<div class="row" id="footer">
+			<div class="row hide" id="footer">
 				<div>
 					<a href="https://archive.diadoz.com" target="_blank">ARCHIVE</a> | <a href="https://shop.diadoz.com" target="_blank">SHOP</a>
 				</div>
