Removed canvas to dynamically create, meta added

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
 		<title>DIADOZ</title>
 		<link href="https://fonts.googleapis.com/css?family=VT323&display=swap" rel="stylesheet"> 
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+			rel="stylesheet">
+			
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	</head>
 	<body>
 		<!-- 3D Model -->
 		<div id="container">
-			<canvas id="scene"></canvas>
 
 			<div class="row float-65 hide">
 				<p id="description"></p>
