Moved footer icons and email panel

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,14 @@
 			<div class="row float-65 hide">
 				<p id="description"></p>
 			</div>
+			
+			<!-- <div> place these links
+				<a href="https://archive.diadoz.com" target="_blank">ARCHIVE</a> | <a href="https://shop.diadoz.com" target="_blank">SHOP</a>
+			</div> -->
 			<div class="row float-50 hide">
-				<label for="MERGE0" id="email-sign">
+				<div for="MERGE0" id="email-sign">
 					<p>We got some new stickers on the way, if you trying to get in on those enter that contact info right here!</p>
-					<div class="input-row">
+					<div class="email-row">
 						<form action="https://diadoz.us15.list-manage.com/subscribe/post" method="POST">
 							<input type="hidden" name="u" value="1914e11c66b8a2faa51e5ffb7">
 							<input type="hidden" name="id" value="42de988a7e">
@@ -33,25 +37,20 @@
 							</button>
 						</form>
 					</div>
-				</label>
-			</div>
-			<div class="row hide" id="footer">
-				<div>
-					<a href="https://archive.diadoz.com" target="_blank">ARCHIVE</a> | <a href="https://shop.diadoz.com" target="_blank">SHOP</a>
-				</div>
-				<div id="socials">
-					<a href="https://twitter.com/diadozofficial" target="_blank">
-						<i class="fab fa-twitter"></i>
-					</a>
-					<a href="https://www.facebook.com/diadoz/" target="_blank">
-						<i class="fab fa-facebook-f"></i>
-					</a>
-					<a href="https://www.instagram.com/diadoz_" target="_blank">
-						<i class="fab fa-instagram"></i>
-					</a>
-					<a href="https://www.youtube.com/channel/UC9n6SV0C0qezMLUnwhJBrxA" target="_blank">
-						<i class="fab fa-youtube"></i>
-					</a>
+					<div id="socials">
+						<a href="https://twitter.com/diadozofficial" target="_blank">
+							<i class="fab fa-twitter"></i>
+						</a>
+						<a href="https://www.facebook.com/diadoz/" target="_blank">
+							<i class="fab fa-facebook-f"></i>
+						</a>
+						<a href="https://www.instagram.com/diadoz_" target="_blank">
+							<i class="fab fa-instagram"></i>
+						</a>
+						<a href="https://www.youtube.com/channel/UC9n6SV0C0qezMLUnwhJBrxA" target="_blank">
+							<i class="fab fa-youtube"></i>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
