Arrange for portfolio removed time crunch features

--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,35 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	</head>
 	<body>
-		<!-- 3D Model -->
 		<div id="container">
-
-			<div class="row float-65 hide">
+			<div class="logo-container"></div>
+			<div class="socials-container">
+				<a href="https://shop.diadoz.com" target="_blank">
+					<i class="material-icons md-60">
+						shopping_basket
+					</i>
+				</a>
+				<a href="https://archive.diadoz.com" target="_blank">
+					<i class="material-icons md-60">
+						archive
+					</i>
+				</a>
+				<a href="https://socials.diadoz.com" target="_blank">
+					<i class="material-icons md-60">
+						public
+					</i>
+				</a>
+				<a href="https://splash.diadoz.com" target="_blank">
+					<i class="material-icons md-60">
+						waves
+					</i>
+				</a>
+			</div>
+			<div class="message-container">
 				<p id="description"></p>
 			</div>
-			
-			<!-- <div> place these links
-				<a href="https://archive.diadoz.com" target="_blank">ARCHIVE</a> | <a href="https://shop.diadoz.com" target="_blank">SHOP</a>
-			</div> -->
-			<div class="row float-50 hide">
+			<div class="email-container">
 				<div for="MERGE0" id="email-sign">
-					<p>We got some new stickers on the way, if you trying to get in on those enter that contact info right here!</p>
 					<div class="email-row">
 						<form action="https://diadoz.us15.list-manage.com/subscribe/post" method="POST">
 							<input type="hidden" name="u" value="1914e11c66b8a2faa51e5ffb7">
@@ -37,7 +53,30 @@
 							</button>
 						</form>
 					</div>
-					<div id="socials">
+				</div>
+			</div>
+			<div class="footer-container">
+				<a href="https://twitter.com/diadozofficial" target="_blank">
+					<i class="fab fa-twitter"></i>
+				</a>
+				<a href="https://www.facebook.com/diadoz/" target="_blank">
+					<i class="fab fa-facebook-f"></i>
+				</a>
+				<a href="https://www.instagram.com/diadoz_" target="_blank">
+					<i class="fab fa-instagram"></i>
+				</a>
+				<a href="https://www.youtube.com/channel/UC9n6SV0C0qezMLUnwhJBrxA" target="_blank">
+					<i class="fab fa-youtube"></i>
+				</a>
+			</div>
+		</div>
+	</body>
+</html>
+
+
+
+<!-- <span class="justified letter-space">New insights can <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions, to better our approach, and to fine tune our output.</span> -->
+					<!-- <div id="socials">
 						<a href="https://twitter.com/diadozofficial" target="_blank">
 							<i class="fab fa-twitter"></i>
 						</a>
@@ -50,13 +89,4 @@
 						<a href="https://www.youtube.com/channel/UC9n6SV0C0qezMLUnwhJBrxA" target="_blank">
 							<i class="fab fa-youtube"></i>
 						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</body>
-</html>
-
-
-
-<!-- <span class="justified letter-space">New insights can <span class="justified-more">develop</span> into new approache<span class="justified-more">s.</span></span><br> <span class="justified">Our insights and achievements over the last year have allowed us to find new directions, to better our approach, and to fine tune our output.</span> -->
+					</div> -->
