Cleaned up email input, added material field

--- a/src/index.html
+++ b/src/index.html
@@ -44,16 +44,20 @@
 							<input type="hidden" name="id" value="42de988a7e">
 							<input id="email-input" name="MERGE0" type="email" placeholder="example@diadoz.com">
 							<!-- <input type="email" autocapitalize="off" autocorrect="off" name="MERGE0" id="MERGE0" size="25" value=""> -->
-							<button type="submit">
-								<span id="submit">
-									<i class="material-icons">
-										email
-									</i>
-								</span>
-							</button>
+							<span id="submit">
+								<i class="material-icons">
+									email
+								</i>
+							</span>
 						</form>
 					</div>
 				</div>
+				<!-- <label class="mdc-text-field mdc-text-field--filled">
+					<span class="mdc-text-field__ripple"></span>
+					<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
+					<span class="mdc-floating-label" id="my-label-id">Hint text</span>
+					<span class="mdc-line-ripple"></span>
+				</label> -->
 			</div>
 			<div class="footer-container">
 				<a href="https://twitter.com/diadozofficial" target="_blank">
