changed class to make more sense

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<div id="container">
 			<div class="logo-container"></div>
-			<div class="socials-container">
+			<div class="links-container">
 				<a href="https://shop.diadoz.com" target="_blank">
 					<i class="material-icons md-60">
 						shopping_basket
