Fixed email submit, added button and styling

--- a/src/index.html
+++ b/src/index.html
@@ -53,12 +53,14 @@
 			<div class="email-container">
 				<div for="MERGE0" id="email-sign">
 					<div class="email-row">
-						<form action="https://diadoz.us15.list-manage.com/subscribe/post" method="POST">
+						<form action="https://diadoz.us15.list-manage.com/subscribe/post" method="POST" target="_blank">
 							<input type="hidden" name="u" value="1914e11c66b8a2faa51e5ffb7">
 							<input type="hidden" name="id" value="42de988a7e">
 							<label class="mdc-text-field mdc-text-field--filled mdc-text-field--with-trailing-icon">
-								<input class="mdc-text-field__input" type="text" aria-labelledby="my-label-id">
-								<i class="material-icons mdc-text-field__icon mdc-text-field__icon--trailing" tabindex="0" role="button">email</i>
+								<input class="mdc-text-field__input" name="MERGE0" type="email" aria-labelledby="my-label-id" required>
+								<button type="submit" value="Subscribe" name="submit">
+									<i class="material-icons mdc-text-field__icon mdc-text-field__icon--trailing">email</i>
+								</button>
 								<span class="mdc-floating-label" id="my-label-id">Email</span>
 								<div class="mdc-line-ripple"></div>
 							</label>
